# pasta-marker

./: .gitignore  README.md  pasta_marker.py  pastas.yaml  pyproject.toml
pastamarkers/: __init__.py  add_marker.py  cupboard.py  markers.py  salsa.pkl  utils.py
pastamarkers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pastamarkers/data/MPD/: B.csv  B_curve.csv  IR.csv
pastamarkers_v2/: pasta.pkl
source/: generate_paths.py  salsa.yaml
test/: test.ipynb  test.py  test_v2.ipynb
test/data/MPD/: IR_curve.csv  UV.csv  UV_curve.csv
